fix: now educations cards wrap

--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,19 @@ hr {
   border: 0;
 }
 .card {
-  width: 30%;
-  display: inline-block;
+  min-width: 30%;
+  width: 300px;
+  /* box-sizing: border-box ; */
+  /* display: inline-block; */
 }
 .education > div{
   /* border: 1px solid red; */
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
+}
+.education > div> div {
+  /* box-sizing: border-box ; */
 }
 .card-content {
   height: 170px;
